[package]
name = "ginko"
version = "0.0.6"
edition = "2021"
license = "MIT"
description = "A device-tree source parser and analyzer"
repository = "https://github.com/Schottkyc137/ginko"
authors = ["Lukas Scheller <lukasscheller@icloud.com>"]
readme = "../README.md"
keywords = ["dts", "device-tree"]
categories = ["parser-implementations"]

[dependencies]
assert_matches = "1.5.0"
clap = { version = "4.5.10", features = ["derive"] }
dunce = "1.0.4"
enum-map = "2.7.3"
itertools = "0.13.0"
strum = { version = "0.26.3", features = ["derive"] }
url = "2.5.2"

[dev-dependencies]
tempfile = "3.10.1"
assert_unordered = "0.3.5"
