[package]
name = "ginko"
version = "0.0.7"
edition = "2021"
license = "MIT"
description = "A device-tree source parser and analyzer"
repository = "https://github.com/Schottkyc137/ginko"
authors = ["Lukas Scheller <lukasscheller@icloud.com>"]
readme = "../README.md"
keywords = ["dts", "device-tree"]
categories = ["parser-implementations"]

[dependencies]
assert_matches = "1"
clap = { version = "4", features = ["derive"] }
codespan = "0.11.1"
codespan-reporting = "0.11.1"
dunce = "1"
enum-map = "2"
itertools = "0.13.0"
line-index = "0.1.1"
m_lexer = "0.0.4"
rowan = "0.15.16"
strum = { version = "0.26.3", features = ["derive"] }
url = "2"
term = "1.0.0"

[dev-dependencies]
tempfile = "3"
assert_unordered = "0.3.5"
