[package]
name = "ginko_ls"
version = "0.0.1"
edition = "2021"

[dependencies]
itertools = "0.12.1"
parking_lot = "0.12.1"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"
ginko = { version = "^0.0.1", path = "../ginko" }
url = "2.5.0"