[package]
name = "ginko_ls"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "A language server for device-trees"
repository = "https://github.com/Schottkyc137/ginko"
authors = ["Lukas Scheller <lukasscheller@icloud.com>"]
readme = "../README.md"

[dependencies]
itertools = "0.12.1"
parking_lot = "0.12.1"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"
ginko = { version = "^0.0.2", path = "../ginko" }
url = "2.5.0"