[package]
name = "ginko_ls"
version = "0.0.7"
edition = "2021"
license = "MIT"
description = "A language server for device-trees"
repository = "https://github.com/Schottkyc137/ginko"
authors = ["Lukas Scheller <lukasscheller@icloud.com>"]
readme = "../README.md"
keywords = ["dts", "device-tree", "language-server", "lsp"]
categories = ["development-tools"]

[dependencies]
itertools = "0.13.0"
parking_lot = "0.12.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
tower-lsp = "0.20.0"
tracing-subscriber = "0.3.18"
ginko = { version = "^0.0.7", path = "../ginko" }
url = "2.5.2"
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
line-index = "0.1.2"
